--- a/.github/workflows/bun.yml
+++ b/.github/workflows/bun.yml
@@ -27,18 +27,39 @@ jobs:
         with:
           bun-version: latest
 
-      - name: Build TS using bun
-        run: bun build ./app.ts --outdir ./build
+      # - name: Build TS using bun
+      #   run: bun build ./app.ts --outdir ./build
 
+      # - name: Upload artifact
+      #   uses: actions/upload-pages-artifact@v3
+      #   with:
+      #     path: .
+
+      # Build the TS files to JS using Bun
+      - name: Build with Bun
+        run: |
+          mkdir -p build
+          bun build src/app.ts --outdir build --target browser --minify
+
+      # Copy public files (HTML/CSS)
+      - name: Copy static files
+        run: |
+          cp public/index.html build/
+          cp public/style.css build/
+
+      # Upload only the final build directory
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .
+          path: build
 
   # Deploy job
   deploy:
     # Add a dependency to the build job
     needs: build
+    permissions:
+      pages: write
+      id-token: write
 
     # Grant GITHUB_TOKEN the permissions required to make a Pages deployment
     permissions:
